--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>
-            Recipes
-        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Recipes</title>
     </head>
 
     <body>
-
-        
+        <a href="./myrecipes/tomato-basil-soup.html">Tomato Basil Soup</a>
     </body>
 </html>
