add how to view/publish page on git

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- view with piebus.github.io/recipes after going to settings > Pages and chaging the source to deploy from the main brain-->
 <!DOCTYPE html>
 <html>
     <head>
