Add neutral color scheme to recipes
Pallete from here: https://www.colourlovers.com/palette/4949487/Neutral

--- a/myrecipes/tomato-basil-soup.html
+++ b/myrecipes/tomato-basil-soup.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Tomato Basil Soup</title>
 </head>
 <body>
     <h1>Tomato Basil Soup</h1>
-    <img src="./tomato-basil-soup.png"
+    <img id="recipe-photo" src="./tomato-basil-soup.png"
         alt="A bowl of tomato basil soup"
-        height="500" width="550">
+        width="500">
         <p>The olive oil makes this tomato soup extra creamy and delicious!</p>
 
     <h3>Ingredients</h3>
