Add margin to soup recipe

--- a/myrecipes/tomato-basil-soup.html
+++ b/myrecipes/tomato-basil-soup.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <title>Tomato Basil Soup</title>
 </head>
-<body>
-    <h1>Tomato Basil Soup</h1>
-    <img id="recipe-photo" src="./tomato-basil-soup.png"
-        alt="A bowl of tomato basil soup"
-        width="500">
-        <p>The olive oil makes this tomato soup extra creamy and delicious!</p>
 
-    <h3>Ingredients</h3>
-    <ul>
+<body>
+    <h1 class="myheader">Tomato Basil Soup</h1>
+    <img class="myimage" id="recipe-photo" src="./tomato-basil-soup.png" alt="A bowl of tomato basil soup" width="500">
+    <p class="description">The olive oil makes this tomato soup extra creamy and delicious!</p>
+
+    <h3 class="myheader">Ingredients</h3>
+    <ul class="mylist">
         <li>9-12 Roma Tomatoes</li>
         <li>1 medium yellow onion, chopped</li>
         <li>1/3 cup carrots, chopped</li>
@@ -27,8 +27,8 @@
         <li>Sea salt and black pepper</li>
         <li>Sour cream to garnish</li>
     </ul>
-    <h3>Instructions</h3>
-    <ol>
+    <h3 class="myheader">Instructions</h3>
+    <ol class="mylist">
         <li>Preheat the oven to 350°F and line a large baking
             sheet with parchment paper. Place the tomatoes cut side up on the baking sheet,
             drizzle with 2 tablespoons of the olive oil, and sprinkle with salt and pepper.
@@ -38,11 +38,12 @@
             Add the onions, carrots, garlic, dried basil, and 1/2 teaspoon salt and cook until soft,
             about 8 minutes. Stir in the tomatoes, vegetable broth, vinegar, and thyme leaves and simmer for 20 minutes.
         </li>
-        <li> et cool slightly and blend with an immersion blender.
-             Blend until smooth.
-             Add the fresh basil and pulse until combined.
+        <li>Let cool slightly and blend with an immersion blender.
+            Blend until smooth.
+            Add the fresh basil and pulse until combined.
         </li>
         <li>Season to taste, ladle into bowls, and garnish with fresh basil leaves and sour cream.</li>
     </ol>
 </body>
+
 </html>
